# py_mailer

./: README.md  pyproject.toml  requirements.txt
py_mailer/: core.py  exceptions.py
py_mailer/errors/: resend_errors.py
py_mailer/providers/: brevo.py  resend.py  sendgrid.py
